<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@id/Pno"
        android:layout_gravity="left"
        android:layout_margin="5dp"

        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:text="@string/Enterpno"
        android:textSize="20dp" />

    <EditText

        android:id="@+id/Pno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:background="#30ffffff"

        android:drawablePadding="10dp"
        android:hint="@string/Pno"
        android:padding="20dp"
        android:textColor="@color/white"

        android:textColorHint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sotp"
        android:layout_below="@id/Pno"
        android:text="@string/Sotp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mr"
        android:layout_below="@id/sotp"
        android:textColor="@color/white"
        android:text="@string/th"
        android:textSize="18dp"

        android:layout_marginBottom="120dp"
        />


    <EditText

        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:background="#30ffffff"

        android:drawablePadding="10dp"
        android:hint="OTP"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Votp"
        android:layout_below="@id/otp"
        android:text="@string/Votp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

</LinearLayout>